--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
     <artifactId>EasyCommand</artifactId>
     <version>1.0</version>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
+            <version>21.0.1</version>
         </dependency>
     </dependencies>
 
@@ -37,7 +37,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>de.savefeelix.utils.CommandListener</mainClass>
+                                    <mainClass>de.savefeelix.utils.record.CommandListener</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
