--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>de.savefeelix.utils.record.CommandListener</mainClass>
+                                    <mainClass>de.savefeelix.MainClass</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
